--- a/facebook/user/templates/base.html
+++ b/facebook/user/templates/base.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>{% block title %}Facebook Clone{% endblock %}</title>
+<title>{% block title %}Connectly – Social App{% endblock %}</title>
 
 <style>
 * { box-sizing: border-box; }
