--- a/facebook/user/templates/base.html
+++ b/facebook/user/templates/base.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>{% block title %}Connectly – Social App{% endblock %}</title>
+<title>{% block title %}Connectly{% endblock %}</title>
 
 <style>
 * { box-sizing: border-box; }
@@ -173,7 +173,7 @@ body {
 
   <!-- LEFT -->
   <div class="nav-left">
-    <a href="{% url 'home' %}" class="logo">f</a>
+    <a href="{% url 'home' %}" class="logo">C</a>
     <input class="search-box" placeholder="Search Facebook">
   </div>
 
